added midudev and edited texts

--- a/book/guias/entrar-a-it/recursos-gratuitos.html
+++ b/book/guias/entrar-a-it/recursos-gratuitos.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../../index.html"><strong aria-hidden="true">1.</strong> Introducción</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../guias/entrar-a-it/index.html"><strong aria-hidden="true">1.1.</strong> Entrar a IT</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../guias/entrar-a-it/como-aprender-programacion.html"><strong aria-hidden="true">1.1.1.</strong> Consejos para aprender programación</a></li><li class="chapter-item expanded "><a href="../../guias/entrar-a-it/recursos-gratuitos.html" class="active"><strong aria-hidden="true">1.1.2.</strong> Recursos gratuitos</a></li></ol></li></ol></li><li class="chapter-item expanded "><li class="part-title">Proximamente...</li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Guias</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.1.</strong> Como conseguir trabajo</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.1.1.</strong> Redactar un CV</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Aprender programacion desde un smartphone</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Tener una marca personal</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Aprender inglés gratis</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.5.</strong> Conseguir experiencia laboral</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> Ejercicios</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Contar mi historia</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> React artesanal</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Promesas artesanales</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Web components con vanilla JS</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Teoría</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">4.1.</strong> Diferencia Framework vs Librería</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.2.</strong> No reinventar la rueda</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.3.</strong> Knowledge managment</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.4.</strong> Método Friedman</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.5.</strong> Árboles binarios</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.6.</strong> Algoritmos de ordenamiento</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.7.</strong> Complejidad algorítmica</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Referencias</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">5.1.</strong> Preguntas entrevistas</div></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../index.html"><strong aria-hidden="true">1.</strong> Introducción</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../guias/entrar-a-it/index.html"><strong aria-hidden="true">1.1.</strong> Entrar a IT</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../guias/entrar-a-it/como-aprender-programacion.html"><strong aria-hidden="true">1.1.1.</strong> Consejos para aprender programación</a></li><li class="chapter-item expanded "><a href="../../guias/entrar-a-it/recursos-gratuitos.html" class="active"><strong aria-hidden="true">1.1.2.</strong> Recursos gratuitos</a></li></ol></li></ol></li><li class="chapter-item expanded "><li class="part-title">Proximamente...</li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> Guias</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.1.</strong> Como conseguir trabajo</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.1.1.</strong> Redactar un CV</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.1.2.</strong> Usar LinkedIn</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Aprender programacion desde un smartphone</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Tener una marca personal</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Aprender inglés gratis</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.5.</strong> Conseguir experiencia laboral</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> Ejercicios</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Contar mi historia</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> React artesanal</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Promesas artesanales</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Web components con vanilla JS</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Teoría</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">4.1.</strong> Diferencia Framework vs Librería</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.2.</strong> No reinventar la rueda</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.3.</strong> Knowledge managment</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.4.</strong> Método Friedman</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.5.</strong> Árboles binarios</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.6.</strong> Algoritmos de ordenamiento</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.7.</strong> Complejidad algorítmica</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.8.</strong> Accesibilidad</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Referencias</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">5.1.</strong> Preguntas entrevistas</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -148,22 +148,26 @@
                         <h1 id="recursos-gratuitos"><a class="header" href="#recursos-gratuitos">Recursos gratuitos:</a></h1>
 <hr>
 <br>
-<p><strong>Fundamentos desarrollo web:</strong></p>
+<p><strong>Fundamentos desarrollo web</strong> <small>Español</small></p>
 <p>Son dos cursos de Google perfectos para empezar. <a href="https://learndigital.withgoogle.com/activate/course/web-development-I">https://learndigital.withgoogle.com/activate/course/web-development-I</a></p>
 <br>
-<p><strong>FreeCodeCamp:</strong></p>
+<p><strong>FreeCodeCamp</strong> <small>Español</small></p>
 <p>Una plataforma gratuita que ofrece cursos y proyectos para aprender programación y otras habilidades en tecnología. <a href="https://www.freecodecamp.org/espanol/">https://www.freecodecamp.org/espanol/</a></p>
 <br>
-<p><strong>Helsinki Bootcamp:</strong></p>
-<p>Una escuela de programación en línea que ofrece un programa intensivo de seis meses para aprender a programar y tener éxito en el mundo laboral. <a href="https://fullstackopen.com/es/">https://fullstackopen.com/es/</a></p>
-<br>
-<p><strong>Khan Academy:</strong></p>
+<p><strong>Khan Academy</strong> <small>Español</small></p>
 <p>Una plataforma educativa gratuita que ofrece cursos y tutoriales en una amplia variedad de temas, incluyendo programación y tecnología. <a href="https://es.khanacademy.org/">https://es.khanacademy.org/</a></p>
 <br>
-<p><strong>Maxi Programa:</strong></p>
+<p><strong>Midu.dev</strong> <small>Español</small></p>
+<p>Midu tiene un canal de youtube y subió varios cursos completos gratuitos.
+<a href="https://midu.dev/">https://midu.dev/</a></p>
+<br>
+<p><strong>Maxi Programa</strong> <small>Español</small></p>
 <p>Curso gratuito de nivel universitario dado por Max, profe de programación en la Universidad Tecnológica Nacional (ARG). <a href="https://maxiprograma.com/">https://maxiprograma.com/</a></p>
 <br>
-<p><strong>Odin Project:</strong></p>
+<p><strong>Helsinki Bootcamp</strong> <small>Inglés</small></p>
+<p>Una escuela de programación en línea que ofrece un programa intensivo de seis meses para aprender a programar y tener éxito en el mundo laboral. <a href="https://fullstackopen.com/es/">https://fullstackopen.com/es/</a></p>
+<br>
+<p><strong>Odin Project</strong> <small>Inglés</small></p>
 <p>Un curso en línea gratuito y completo para aprender a programar desde cero. <a href="https://www.theodinproject.com/">https://www.theodinproject.com/</a></p>
 
                     </main>
@@ -189,6 +193,22 @@
 
         </div>
 
+        <!-- Livereload script (if served using the cli tool) -->
+        <script>
+            const wsProtocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const wsAddress = wsProtocol + "//" + location.host + "/" + "__livereload";
+            const socket = new WebSocket(wsAddress);
+            socket.onmessage = function (event) {
+                if (event.data === "reload") {
+                    socket.close();
+                    location.reload();
+                }
+            };
+
+            window.onbeforeunload = function() {
+                socket.close();
+            }
+        </script>
 
 
 
